# qr-code-tracking

./: .editorconfig  .env.example  .gitignore  .prettierrc.yaml  .sequelizerc  README.md  Vagrantfile  database.js  database.json  index.code-workspace  package.json  rollup.config.js
server/: Cargo.toml  auth.js  context.js  dotenv.js  index.js  logging.js  qrcode.js  schema.js  sequelize.js
server/config/: dotenv.js  logging.js
server/database/: index.js  qrcode.js  trackinginfo.js  user.js
server/database/migration/: 20190330103134-create-user.js  20190331142118-create-qr-code.js  20190331142302-create-user.js
server/database/migrations/: 20190331142118-create-qr-code.js  20190331142212-create-tracking-info.js  20190331142302-create-user.js  20190409164127-add-qrcode-description-column.js  20190430165112-add-qrcode-redirect-url-column.js  20190509112251-add-tracking-info-user-agent-column.js
server/graphql/date/: index.js
server/graphql/hello/: index.js  types.js
server/graphql/qrcode/: index.js  types.js
server/graphql/root/: index.js  types.js
server/graphql/scalar/: date.js  index.js  types.js
server/graphql/trackinginfo/: index.js  types.js
server/graphql/user/: index.js  types.js
server/routes/: assets.js  qrcode.js
server/src/: main.rs
server/src/database/: mod.rs
server/src/graphql/: mod.rs
server/src/model/: mod.rs  post.rs  query.rs
server/src/routes/: graphql.rs  mod.rs
server/utils/: qrcode.js
web/: .env.example  App.html  Home.html  global.css  index.html  main.html  main.js  main.svelte  rollup.config.js  (+1 more)
(+29 files in other folders)
