[package]
name = "qr-code-tracking-server"
version = "0.1.0"
authors = ["clitetailor <ducnhatphung@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
juniper = { version = "0.14.2", features = ["expose-test-schema", "serde_json"] }
juniper_rocket = "0.5.2"
rocket = "0.4.7"
